--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "prestart": "docker-compose up -d",
-    "prestart:dev": "docker-compose up -d",
-    "prestart:debug": "docker-compose up -d",
-    "prestart:prod": "docker-compose up -d",
+    "prestart:dev": "docker-compose up -d && prisma db push",
+    "prestart:debug": "docker-compose up -d && prisma db push",
+    "prestart:prod": "docker-compose up -d && prisma db push",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
